2011-09-24 Updated JastAdd2 version.

2011-09-21 Updated JastAdd2 version. Reverted the previous change to
ClassPath.jrag.

2011-09-20 Updated JastAdd2 jar file. Fixed Ast refine in ClassPath for new
JastAdd release.

2011-09-15 Added isDefaultConstructor flag to ConstructorDecl. Pretty printing
now ignores auto-generated default constructors.

2011-06-03 Refactored the Java AST. CatchClause is now an abstract base class
for BasicCatch, which fills the same role that CatchClause previously had.

2011-05-12 Modified build files to use sufficient heap when running JastAdd.

2011-04-01 errors and warnings are printed on stderr instead of stdout

2011-08-09 added build file to root JastAddJ directory with clean target

2011-08-09 Refactored VariableDeclaration.jrag - moved interface
Variable to Variable.jadd
