@@ -33,8 +33,20 @@
 	<taskdef name="jastadd" classname="jastadd.JastAddTask"
 		classpath="${tools.dir}/jastadd2.jar"/>
 
-	<target name="build" depends="gen" description="Compile Java7Backend">
-		<copy todir="." preservelastmodified="true">
+	<target name="prepare">
+		<tstamp>
+			<format property="build.date" pattern="yyyyMMdd"/>
+		</tstamp>
+		<copy file="resources/JastAddJ.txt" toFile="JastAddJ.properties">
+  			<filterset>
+    			<filter token="VERSION" value="R${build.date}"/>
+  			</filterset>
+		</copy>
+	</target>
+
+	<target name="build" depends="gen,prepare"
+		description="Compile Java7Backend">
+		<copy todir="${basedir}" preservelastmodified="true">
 			<fileset dir="${Java7Frontend}">
 				<include name="JavaPrettyPrinter.java"/>
 			</fileset>
@@ -210,6 +222,7 @@
 		<delete file="JavaCompiler.jar"/>
 		<delete file="Java7Backend-src.jar"/>
 		<delete file="JavaPrettyPrinter.java"/>
+		<delete file="JastAddJ.properties"/>
 	</target>
 
 	<!-- remove generated source files -->
