@@ -1,2 +1,2 @@
-jastaddj.Version=R20110712
+jastaddj.Version=@VERSION@
 jastaddj.JavaCompiler=Java Compiler
