@@ -19,7 +19,19 @@
 	<!-- "jastadd" is an ant task class in jastadd2.jar -->
 	<taskdef name="jastadd" classname="jastadd.JastAddTask" classpath="${tools.dir}/jastadd2.jar"/>
 
-	<target name="build" depends="gen" description="Compile Java7Frontend">
+	<target name="prepare">
+		<tstamp>
+			<format property="build.date" pattern="yyyyMMdd"/>
+		</tstamp>
+		<copy file="resources/JastAddJ.txt" toFile="JastAddJ.properties">
+  			<filterset>
+    			<filter token="VERSION" value="R${build.date}"/>
+  			</filterset>
+		</copy>
+	</target>
+
+	<target name="build" depends="gen,prepare"
+		description="Compile Java7Frontend">
 		<javac debug="true" nowarn="true" srcdir="."
 			includeantruntime="true">
 			<include name="**/*.java"/>
@@ -166,6 +178,7 @@
 		</delete>
 		<delete file="JavaChecker.jar"/>
 		<delete file="Java7Frontend-src.jar"/>
+		<delete file="JastAddJ.properties"/>
 	</target>
 
 	<!-- remove generated source files -->
