@@ -1,4 +1,4 @@
-jastaddj.Version=R20110601
+jastaddj.Version=@VERSION@
 jastaddj.PrettyPrinter=Java Pretty Printer
 jastaddj.JavaChecker=Java Checker
 jastaddj.DumpTree=Java AST Dumper
