@@ -1,3 +1,5 @@
+2011-11-23 Added automatic version number update to build scripts for JJ7.
+
 2011-09-24 Updated JastAdd2 version.
 
 2011-09-21 Updated JastAdd2 version. Reverted the previous change to
